fixed width overflow

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
 }
 
 .full-screen {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
